hard-gists/3494560/run.log
=== Docker Run Log for 3494560 ===
Started at: Mi 29. Okt 13:54:06 CET 2025

[2025-10-29 13:54:07] START: Running container for 3494560
[2025-10-29 13:54:07] SUCCESS: Container e7407c1d76407e835fddebb0a195de5d8ddb6496db273a1ae412859330e9b72d started for 3494560
=== Container logs for 3494560 ===
  File "/snippet.py", line 82
    print x, y
    ^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3494560 ===
[2025-10-29 13:54:09] INFO: Container e7407c1d76407e835fddebb0a195de5d8ddb6496db273a1ae412859330e9b72d has stopped
